Tasneem Sherif Tawfik Ali Yousif/Kubernates Full task/Kubernates_Full_task/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fe
  labels:
    name: fe
---
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-db
  labels:
    name: mongo-db
---
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-express
  labels:
    name: mongo-express
