Tasneem Sherif Tawfik Ali Yousif/Kubernates Full task/Kubernates_Full_task/allow-mongo-from-mongo-express.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-mongo-express
  namespace: mongo-db
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: mongo-express
      ports:
        - protocol: TCP
          port: 27017
